@@ -28,6 +28,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import net.codacloud.ApiException;
@@ -153,10 +154,32 @@ public interface CodaClient {
 	 */
 	default Optional<RegistrationLight> getRegistrationForLabel(
 		final String label) throws ApiException {
-		return listRegistrations().stream()
-			.sorted(Comparator.comparingLong(RegistrationLight::getId))
-			.filter(r -> label.startsWith(r.getLabel()))
-			.findFirst();
+		if (label.isBlank()) {
+			return Optional.empty();
+		}
+
+		final Map<String, RegistrationLight> registrationByLabel =
+			listRegistrations().stream()
+				.collect(
+					toMap(RegistrationLight::getLabel, Function.identity()));
+
+		if (registrationByLabel.containsKey(label)) {
+			return Optional.of(label).map(registrationByLabel::get);
+		}
+
+		final int length64 = 64;
+		final String label64 = label.substring(0, length64);
+		if (registrationByLabel.containsKey(label64)) {
+			return Optional.of(label64).map(registrationByLabel::get);
+		}
+
+		final int length60 = 60;
+		final String label60 = label.substring(0, length60);
+		if (registrationByLabel.containsKey(label60)) {
+			return Optional.of(label60).map(registrationByLabel::get);
+		}
+
+		return Optional.empty();
 	}
 
 	/**
@@ -189,7 +212,7 @@ public interface CodaClient {
 	default Integer labelToAccountId(final String label) throws ApiException {
 		return findAccountWithName(label).map(Account::getId)
 			.orElseThrow(() -> new ApiException(
-				String.format("no account exists for name '%s'", label)));
+				"no account exists for name '%s'".formatted(label)));
 	}
 
 	/**
@@ -204,7 +227,7 @@ public interface CodaClient {
 		final String label = registration.getLabel();
 		return findAccountWithName(label).map(Account::getId)
 			.orElseThrow(() -> new ApiException(
-				String.format("no account exists for name '%s'", label)));
+				"no account exists for name '%s'".formatted(label)));
 	}
 
 	/**
@@ -216,9 +239,30 @@ public interface CodaClient {
 	 */
 	default Optional<Account> findAccountWithName(final String name)
 		throws ApiException {
-		return listAccounts(null).stream()
-			.filter(account -> Objects.equals(account.getName(), name))
-			.findFirst();
+		if (name.isBlank()) {
+			return Optional.empty();
+		}
+
+		final Map<String, Account> accountsByName = listAccounts(null).stream()
+			.collect(toMap(Account::getName, Function.identity()));
+
+		if (accountsByName.containsKey(name)) {
+			return Optional.of(name).map(accountsByName::get);
+		}
+
+		final int length64 = 64;
+		final String label64 = name.substring(0, length64);
+		if (accountsByName.containsKey(label64)) {
+			return Optional.of(label64).map(accountsByName::get);
+		}
+
+		final int length60 = 60;
+		final String label60 = name.substring(0, length60);
+		if (accountsByName.containsKey(label60)) {
+			return Optional.of(label60).map(accountsByName::get);
+		}
+
+		return Optional.empty();
 	}
 
 	/**
@@ -429,6 +473,7 @@ public interface CodaClient {
 	 * @throws ApiException ...
 	 * @deprecated use {@link #getScanStatus(String, Integer)} instead!
 	 */
+	@Deprecated
 	ScanStatus getScanStatus(Integer accountId) throws ApiException;
 
 	/**
